--- a/src/opnsense/mvc/app/controllers/OPNsense/Unbound/forms/dnsbl.xml
+++ b/src/opnsense/mvc/app/controllers/OPNsense/Unbound/forms/dnsbl.xml
@@ -1,18 +1,18 @@
 <form>
     <field>
-        <id>dnsbl.enabled</id>
+        <id>unbound.dnsbl.enabled</id>
         <label>Enable</label>
         <type>checkbox</type>
         <help>Enable the usage of DNS blocklists.</help>
     </field>
     <field>
-        <id>dnsbl.type</id>
+        <id>unbound.dnsbl.type</id>
         <label>Type of DNSBL</label>
         <type>select_multiple</type>
         <help>Select which kind of DNSBL you want to use.</help>
     </field>
     <field>
-        <id>dnsbl.lists</id>
+        <id>unbound.dnsbl.lists</id>
         <label>URLs of Blacklists</label>
         <type>select_multiple</type>
         <style>tokenize</style>
@@ -21,7 +21,7 @@
         <help>List of domains from where blacklist will be downloaded.</help>
     </field>
     <field>
-        <id>dnsbl.whitelists</id>
+        <id>unbound.dnsbl.whitelists</id>
         <label>Whitelist Domains</label>
         <type>select_multiple</type>
         <style>tokenize</style>
