--- a/src/opnsense/mvc/app/controllers/OPNsense/Unbound/forms/dnsbl.xml
+++ b/src/opnsense/mvc/app/controllers/OPNsense/Unbound/forms/dnsbl.xml
@@ -13,12 +13,12 @@
     </field>
     <field>
         <id>unbound.dnsbl.lists</id>
-        <label>URLs of Blacklists</label>
+        <label>URLs of Blocklists</label>
         <type>select_multiple</type>
         <style>tokenize</style>
         <allownew>true</allownew>
         <advanced>true</advanced>
-        <help>List of domains from where blacklist will be downloaded.</help>
+        <help>List of domains from where blocklist will be downloaded.</help>
     </field>
     <field>
         <id>unbound.dnsbl.whitelists</id>
@@ -27,5 +27,13 @@
         <style>tokenize</style>
         <allownew>true</allownew>
         <help>List of domains to whitelist. You can use regular expressions.</help>
+    </field>
+    <field>
+        <id>unbound.miscellaneous.privatedomain</id>
+        <label>Private Domains</label>
+        <type>select_multiple</type>
+        <style>tokenize</style>
+        <allownew>true</allownew>
+        <help>List of domains to mark as private. You only need this for some DNSBL lists which resolve to private addresses.</help>
     </field>
 </form>
